bk_ida/gobmkida/c2/do_find_superstring
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_find_superstring/src/engine/utils.c:2323:28: error: use of undeclared identifier 'stones_on_board_stone_count_for_position'
v39 = *( int *)( ( char *)&stones_on_board_stone_count_for_position + v37); 
                           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_find_superstring/src/engine/utils.c:2376:28: error: use of undeclared identifier 'stones_on_board_stone_count_for_position'
v48 = *( int *)( ( char *)&stones_on_board_stone_count_for_position + v46); 
                           ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_find_superstring/src/obj/1/utils.o] Error 1
